<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.transportec.MainMenu">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="330dp"
        android:layout_height="240dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/transportec_logo_foreground" />

    <Button
        android:id="@+id/btn_consultBus"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/roboto"
        android:text="@string/consult_bus"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultTren"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_consultTren"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/roboto"
        android:text="@string/consult_taxi"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_consultTaxi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_consultTaxi"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/roboto"
        android:text="@string/consult_tren"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_planRuta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_planRuta"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custombutton"
        android:fontFamily="@font/roboto"
        android:text="@string/plan_ruta"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/infobutton"
        android:contentDescription="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</android.support.constraint.ConstraintLayout>
